--- a/gitlab/gitlab-ci.yml
+++ b/gitlab/gitlab-ci.yml
@@ -72,6 +72,7 @@ review:
     <<: *only-default
     script:
         - cp /home/ci/docker-compose-review.yml ./docker-compose.yml
+        - docker-compose down --rmi all -v
         - docker-compose up -d
         - "docker-compose exec -T php-fpm sed -i \"s/database_name:.*/database_name: ${COMPOSE_PROJECT_NAME}/\" config/parameters.yml"
         - docker-compose exec -T php-fpm sed -i "s/http:\/\/127.0.0.1:8000/https:\/\/${HOST}/g" config/domains_urls.yml
