FE: order: user can choose one gift from corresponding order gift price level
- it is not possible to choose gift from lower or higher level than the current one
- gifts from next level and remaining price difference are displayed when the next level gifts exist

--- a/config/images.yml
+++ b/config/images.yml
@@ -59,7 +59,7 @@
             width: 70
             height: 70
             crop: false
-            occurrence: 'Front-end: Thumbnail of images under the main image in product detail, autocomplete, sets, variants, cartbox'
+            occurrence: 'Front-end: Thumbnail of images under the main image in product detail, autocomplete, sets, variants, cartbox, gifts selection in cart'
         -   name: list
             width: 220
             height: 220
