Upgraded Elastic and Kibana to version 7.5.1.

--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,7 @@
         "ext-calendar": "*",
         "ext-ctype": "*",
         "ext-curl": "*",
+        "ext-dom": "*",
         "ext-fileinfo": "*",
         "ext-gd": "*",
         "ext-iconv": "*",
@@ -35,7 +36,6 @@
         "ext-pdo_pgsql": "*",
         "ext-redis": "*",
         "ext-xml": "*",
-        "ext-dom": "*",
         "arvenil/ninja-mutex": "0.6.0 as 0.4.1",
         "commerceguys/intl": "^1.0.0",
         "composer/composer": "^1.6.0",
@@ -46,9 +46,13 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0.2",
         "doctrine/doctrine-migrations-bundle": "^1.3.0",
         "doctrine/persistence": "~1.2.0",
+        "elasticsearch/elasticsearch": "v7.5.0 as 6.0.1",
+        "emanueleminotto/twig-cache-bundle": "^1.0",
         "fp/jsformvalidator-bundle": "^1.5.1",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "fzaninotto/faker": "^1.7.1",
+        "google/apiclient": "^2.0",
+        "gopay/payments-sdk-php": "^1.4",
         "helios-ag/fm-elfinder-bundle": "^9.2",
         "heureka/overeno-zakazniky": "^2.0.6",
         "incenteev/composer-parameter-handler": "^2.1.3",
@@ -57,8 +61,15 @@
         "jms/translation-bundle": "^1.4.1",
         "joschi127/doctrine-entity-override-bundle": "^0.7.2",
         "league/flysystem": "^1.0",
+        "league/flysystem-aws-s3-v3": "^1.0",
+        "league/iso3166": "^2.1",
         "mallgroup/mpapi-client": "^3.10",
+        "nette/utils": "^2.4",
+        "paypal/rest-api-sdk-php": "*",
         "phing/phing": "^2.16.1",
+        "php-http/guzzle6-adapter": "^2.0",
+        "php-http/message": "^1.7",
+        "picqer/php-barcode-generator": "^0.3.0",
         "presta/sitemap-bundle": "^1.5.3",
         "prezent/doctrine-translatable-bundle": "^1.0.3",
         "psr/log": "~1.0.2",
@@ -66,18 +77,19 @@
         "sensio/generator-bundle": "^3.1.7",
         "sensiolabs/security-checker": "^6.0",
         "shopsys/doctrine-orm": "^2.6.2",
-        "shopsys/google-cloud-bundle": "9.0.x-dev",
-        "shopsys/postgres-search-bundle": "^0.1",
-        "shopsys/migrations": "9.0.x-dev",
         "shopsys/form-types-bundle": "9.0.x-dev",
         "shopsys/framework": "9.0.x-dev",
         "shopsys/frontend-api": "9.0.x-dev",
+        "shopsys/google-cloud-bundle": "9.0.x-dev",
+        "shopsys/migrations": "9.0.x-dev",
         "shopsys/plugin-interface": "9.0.x-dev",
+        "shopsys/postgres-search-bundle": "^0.1",
+        "shopsys/product-feed-google": "9.0.x-dev",
         "shopsys/product-feed-heureka": "9.0.x-dev",
         "shopsys/product-feed-heureka-delivery": "9.0.x-dev",
         "shopsys/product-feed-zbozi": "9.0.x-dev",
-        "shopsys/product-feed-google": "9.0.x-dev",
         "shopsys/read-model": "9.0.x-dev",
+        "simpod/sms-manager": "^0.1.0",
         "snc/redis-bundle": "^2.1.8",
         "stof/doctrine-extensions-bundle": "^1.3.0",
         "symfony-cmf/routing": "^2.0.3",
@@ -106,18 +118,7 @@
         "twig/extensions": "^1.5.1",
         "twig/twig": "^2.4.8",
         "vasek-purchart/console-errors-bundle": "^1.0.1",
-        "webmozart/assert": "^1.4",
-        "gopay/payments-sdk-php": "^1.4",
-        "league/iso3166": "^2.1",
-        "league/flysystem-aws-s3-v3": "^1.0",
-        "paypal/rest-api-sdk-php": "*",
-        "emanueleminotto/twig-cache-bundle": "^1.0",
-        "php-http/message": "^1.7",
-        "google/apiclient": "^2.0",
-        "nette/utils": "^2.4",
-        "picqer/php-barcode-generator": "^0.3.0",
-        "simpod/sms-manager": "^0.1.0",
-        "php-http/guzzle6-adapter": "^2.0"
+        "webmozart/assert": "^1.4"
     },
     "require-dev": {
         "ext-pgsql": "*",
