--- a/config/services.yaml
+++ b/config/services.yaml
@@ -26,7 +26,7 @@ services:
         tags: ['controller.service_arguments']
 
     App\:
-        resource: '../src/**/*{BreadcrumbGenerator,Calculation,Facade,Factory,Generator,Handler,InlineEdit,Listener,Loader,Mapper,Parser,Provider,Recalculator,RecalculationScheduler,Registry,Repository,Resolver,Service,Scheduler,Subscriber,Transformer,Validator,OnCurrentDomain}.php'
+        resource: '../src/**/*{BreadcrumbGenerator,Calculation,Facade,Factory,Generator,Handler,InlineEdit,Listener,Loader,Mapper,Parser,Provider,Recalculator,RecalculationScheduler,Registry,Repository,Resolver,Service,Scheduler,Subscriber,Transformer,Validator,OnCurrentDomain,Converter}.php'
         exclude: '../src/{Command,Controller,DependencyInjection,Form,Migrations,Resources,Twig}'
 
     App\Command\Migration\:
@@ -638,3 +638,11 @@ services:
     App\Model\Product\Availability\AvailabilityGridFactory: ~
 
     Shopsys\FrameworkBundle\Model\Product\Availability\AvailabilityGridFactory: '@App\Model\Product\Availability\AvailabilityGridFactory'
+
+    App\Model\Product\Search\ProductElasticsearchRepository: ~
+
+    App\Model\Product\Search\FilterQuery: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Search\FilterQuery: '@App\Model\Product\Search\FilterQuery'
+
+    Shopsys\FrameworkBundle\Model\Product\Search\ProductElasticsearchRepository: '@App\Model\Product\Search\ProductElasticsearchRepository'
