--- a/docker/conf/docker-compose-mac.yml.dist
+++ b/docker/conf/docker-compose-mac.yml.dist
@@ -101,8 +101,10 @@ services:
             - discovery.type=single-node
 
     kibana:
-        image: docker.elastic.co/kibana/kibana-oss:6.3.2
+        image: docker.elastic.co/kibana/kibana-oss:7.5.1
         container_name: shopsys-framework-kibana
+        depends_on:
+            - elasticsearch
         ports:
             - "5601:5601"
 
