--- a/docker/nginx/s3/nginx.conf
+++ b/docker/nginx/s3/nginx.conf
@@ -4,6 +4,7 @@ upstream php-upstream {
 
 server {
     listen 8080;
+    access_log /var/log/nginx/shopsys-framework.access.log;
     root /var/www/html/web;
     server_tokens off;
     proxy_ignore_client_abort on;
@@ -38,7 +39,8 @@ server {
         }
 
         location ~ ^/content/ {
-            resolver                10.80.46.11;
+            # VSHosting DNS
+            resolver                78.24.12.150;
             proxy_intercept_errors  on;
             error_page              403 = @app;
 
