--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,12 @@
             "Tests\\": "tests/"
         }
     },
+    "repositories": [
+      {
+        "type": "vcs",
+        "url": "https://gitlab+deploy-token-4:yqMfHR2F4qc6rbFequP4@gitlab.shopsys.cz/devops/kubernetes-deployment.git"
+      }
+    ],
     "require": {
         "php": "^7.2",
         "ext-bcmath": "*",
@@ -40,6 +46,7 @@
         "commerceguys/intl": "^1.0.0",
         "composer/composer": "^1.6.0",
         "craue/formflow-bundle": "^3.0.3",
+        "devops/kubernetes-deployment": "^1.0",
         "doctrine/annotations": "^1.6.0",
         "doctrine/common": "^2.8.1",
         "doctrine/doctrine-bundle": "^1.8.1",
