--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -36,16 +36,6 @@ COPY --chown=www-data:www-data / /var/www/html
 
 RUN composer install --optimize-autoloader --no-interaction --no-progress --no-dev
 
-RUN php phing build-deploy-part-1-db-independent
+RUN php phing build-deploy-part-1-db-independent clean
 
-########################################################################################################################
-
-FROM base as ci
-
-COPY --chown=www-data:www-data / /var/www/html
-
-RUN composer install --optimize-autoloader --no-interaction --no-progress --dev
-
-RUN php phing composer-dev npm dirs-create test-dirs-create assets standards tests-unit tests-acceptance-build
-
-RUN ./bin/console shopsys:environment:change prod
+RUN chmod +x ./deploy/deploy-project.sh && ./deploy/deploy-project.sh merge
