update FpJsFormValidator bundle
- see https://github.com/shopsys/shopsys/pull/1664

--- a/.eslintignore
+++ b/.eslintignore
@@ -1,5 +1,6 @@
 /node_modules
 /assets/js/commands/translations/mocks/DummyClassWithError.js
+/assets/js/bundles
 
 # eslint-check-diff runs check with provided files that could contain even javascripts from tests folder
 /tests
