--- a/composer.json
+++ b/composer.json
@@ -55,7 +55,7 @@
         "doctrine/persistence": "~1.2.0",
         "elasticsearch/elasticsearch": "v7.5.0 as 6.0.1",
         "emanueleminotto/twig-cache-bundle": "^1.0",
-        "fp/jsformvalidator-bundle": "^1.5.1",
+        "fp/jsformvalidator-bundle": "1.5.x-dev",
         "friendsofsymfony/ckeditor-bundle": "^2.1",
         "fzaninotto/faker": "^1.7.1",
         "google/apiclient": "^2.0",
