add url to gitlab for devel and production
(cherry picked from commit f32bfa14a5fd011ef893ddde20e6cd4aa7068bd4)

--- a/gitlab/gitlab-ci.yml
+++ b/gitlab/gitlab-ci.yml
@@ -135,6 +135,7 @@ deploy:production:
         - /^master-.*$/
     environment:
         name: production
+        url: https://${DOMAIN_HOSTNAME_1}
 
 deploy:devel:
     <<: *deploy
@@ -147,4 +148,5 @@ deploy:devel:
         - /^devel-.*$/
     environment:
         name: devel
+        url: https://${DOMAIN_HOSTNAME_1}
 
