--- a/config/parameters.yml.dist
+++ b/config/parameters.yml.dist
@@ -29,7 +29,7 @@ parameters:
     env(REDIS_PREFIX): ''
     env(ELASTIC_SEARCH_INDEX_PREFIX): ''
 
-    gopay.config:
+    gopay_config:
         cs:
             goid: 8111408481
             clientId: 1437261089
@@ -77,7 +77,7 @@ parameters:
     #API Key owned by @malyMiso
     googleApiKey: AIzaSyCgJiyuJ4hrcC6W1eot6nPiM0YzZ9ZnE-Y
 
-    gtm.config:
+    gtm_config:
         cs:
             enabled: true
             container_id: TEST
