--- a/package.json
+++ b/package.json
@@ -6,17 +6,18 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production --progress",
+        "copy-assets": "./assets/js/bin/copyAssets.js",
         "trans": "./assets/js/bin/trans.js",
         "trans:dump": "./assets/js/bin/transDump.js",
         "tests": "npm run tests:unit",
-        "tests:unit": "jest"
+        "tests:unit": "jest assets"
     },
     "preferGlobal": false,
     "devDependencies": {
         "@babel/core": "^7.8.3",
         "@babel/parser": "^7.7.7",
-        "@babel/traverse": "^7.7.4",
         "@babel/preset-env": "^7.8.3",
+        "@babel/traverse": "^7.7.4",
         "@symfony/webpack-encore": "^0.28.0",
         "autoprefixer": "^9.4.4",
         "babel-jest": "^25.1.0",
@@ -41,6 +42,7 @@
         "grunt-webfont": "^1.7.2",
         "jest": "^25.1.0",
         "jit-grunt": "^0.10.0",
+        "ncp": "^2.0.0",
         "pofile": "^1.1.0",
         "regenerator-runtime": "^0.13.2",
         "stylelint": "^11.1.1",
@@ -48,7 +50,7 @@
         "webpack-notifier": "^1.6.0"
     },
     "dependencies": {
-        "@shopsys/framework": "9.0.0-dev.1",
+        "@shopsys/framework": "9.0.0-dev.3",
         "codemirror": "^5.49.2",
         "jquery-ui": "^1.12.1",
         "jquery-ui-touch-punch": "^0.2.3",
