FE product list: properly display "product action"
- main variant: link to product detail with variants selection is provided instead of "add to cart" form

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -593,3 +593,5 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Search\FilterQuery: '@App\Model\Product\Search\FilterQuery'
 
     Shopsys\FrameworkBundle\Model\Product\Search\ProductElasticsearchRepository: '@App\Model\Product\Search\ProductElasticsearchRepository'
+
+    Shopsys\ReadModelBundle\Product\Action\ProductActionViewFactory: '@App\Model\Product\View\ProductActionViewFactory'
