--- a/config/shopsys-routing/routing_front_cs.yml
+++ b/config/shopsys-routing/routing_front_cs.yml
@@ -89,3 +89,7 @@ front_store_index:
 front_store_detail:
     path: /prodejny/detail/{storeId}/
     defaults: { _controller: App\Controller\Front\StoreController:detailAction }
+
+front_brand_list:
+    path: /prehled-znacek/
+    defaults: { _controller: App\Controller\Front\BrandController:listAction }
