--- a/config/shopsys-routing/routing_front_de.yml
+++ b/config/shopsys-routing/routing_front_de.yml
@@ -89,3 +89,7 @@ front_store_index:
 front_store_detail:
     path: /stores/detail/{storeId}/
     defaults: { _controller: App\Controller\Front\StoreController:detailAction }
+
+front_brand_list:
+    path: /tag-ubersicht/
+    defaults: { _controller: App\Controller\Front\BrandController:listAction }
