Added an ability to edit discount of pricing groups. When a customer registers he is automatically assigned to Registered customer pricing group.

--- a/config/forms.yml
+++ b/config/forms.yml
@@ -78,3 +78,7 @@ services:
     App\Form\Admin\AvailabilityFormTypeExtension:
         tags:
             - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Product\Availability\AvailabilityFormType }
+
+    App\Form\Admin\PricingGroupFormTypeExtension:
+        tags:
+            - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Pricing\Group\PricingGroupFormType }
