--- a/config/services.yaml
+++ b/config/services.yaml
@@ -619,3 +619,9 @@ services:
     App\Component\Form\FormBuilderHelper:
         arguments:
             $disableFields: '%disable_form_fields_from_transfer%'
+
+    Shopsys\FrameworkBundle\Model\Pricing\Group\Grid\PricingGroupGridFactory: '@App\Model\Pricing\Group\PricingGroupGridFactory'
+
+    Shopsys\FrameworkBundle\Model\Customer\BillingAddressDataFactoryInterface: '@App\Model\Customer\BillingAddressDataFactory'
+
+    Shopsys\FrameworkBundle\Model\Customer\DeliveryAddressDataFactoryInterface: '@App\Model\Customer\DeliveryAddressDataFactory'
