[US-7681] Pohoda Bundle
- Added new component PohodaExport which exporting data from Pohoda database
- Added new MSSQL entity manager (PohodaEntityMangager) which connects to Pohoda database

--- a/config/parameters.yml.dist
+++ b/config/parameters.yml.dist
@@ -29,6 +29,15 @@ parameters:
     env(REDIS_PREFIX): ''
     env(ELASTIC_SEARCH_INDEX_PREFIX): ''
 
+    pohoda_database_driver: pdo_sqlsrv
+    pohoda_database_host: 10.10.11.189
+    pohoda_database_port: 1433
+    pohoda_database_name: StwPh_12345678_2018
+    pohoda_database_user: pohodasql
+    pohoda_database_password: pohoda123
+    pohoda_database_charset: UTF8
+    pohoda_database_server_version: !!float 12
+
     gopay_config:
         cs:
             goid: 8111408481
