--- a/composer.json
+++ b/composer.json
@@ -40,6 +40,7 @@
         "ext-openssl": "*",
         "ext-pdo": "*",
         "ext-pdo_pgsql": "*",
+        "ext-pdo_sqlsrv": "^5.8",
         "ext-redis": "*",
         "ext-xml": "*",
         "arvenil/ninja-mutex": "0.6.0 as 0.4.1",
