--- a/config/services.yaml
+++ b/config/services.yaml
@@ -12,6 +12,16 @@ services:
         autoconfigure: true
         public: false
 
+    App\Component\Transfer\Pohoda\Doctrine\PohodaEntityManager: '@doctrine.orm.pohoda_entity_manager'
+
+    doctrine.orm.pohoda_entity_manager:
+        class: App\Component\Transfer\Pohoda\Doctrine\PohodaEntityManager
+        lazy: true # important, frontend does not need PohodaEntityManager, see ocramius/proxy-manager
+        factory: [App\Component\Transfer\Pohoda\Doctrine\PohodaEntityManager, create]
+        arguments:
+            - '@doctrine.dbal.pohoda_connection'
+            - '@doctrine.orm.pohoda_configuration'
+
     joschi127_doctrine_entity_override.event_subscriber.load_orm_metadata:
         class: App\Component\EntityExtension\LoadORMMetadataSubscriber
         arguments:
@@ -599,3 +609,7 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Availability\ProductAvailabilityCalculation: '@App\Model\Product\Availability\ProductAvailabilityCalculation'
 
     Shopsys\ReadModelBundle\Product\Action\ProductActionViewFactory: '@App\Model\Product\View\ProductActionViewFactory'
+
+    App\Component\Transfer\Pohoda\Product\PohodaProductExportFacade:
+        arguments:
+            $logger: '@monolog.logger.cron'
