--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -18,10 +18,10 @@ services:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*' }
 
-    #    App\Model\Product\Transfer\ProductImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '*', minutes: '*' }
-    #
+    App\Model\Product\Transfer\ProductImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
+
     #    App\Model\Product\Pricing\Transfer\AllProductPriceImportCronModule:
     #        tags:
     #            - { name: shopsys.cron, hours: '01', minutes: '30' }
