--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -14,14 +14,6 @@ services:
         tags:
             - { name: shopsys.cron, hours: '3', minutes: '50', readableFrequency: '1x za den' }
 
-    App\Model\Product\Transfer\ProductInfoQueueImportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*' }
-
-    App\Model\Product\Transfer\ProductImportCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*' }
-
     #    App\Model\Product\Pricing\Transfer\AllProductPriceImportCronModule:
     #        tags:
     #            - { name: shopsys.cron, hours: '01', minutes: '30' }
@@ -115,14 +107,26 @@ services:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '15', instanceName: customers, readableFrequency: '1x za hodinu' }
 
-#    App\Model\Customer\Registration\Transfer\CustomerExportCronModule:
-#        tags:
-#            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
-#
-#    App\Model\Order\Transfer\OrderExportCronModule:
-#        tags:
-#            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
+    #    App\Model\Customer\Registration\Transfer\CustomerExportCronModule:
+    #        tags:
+    #            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
+    #
+    #    App\Model\Order\Transfer\OrderExportCronModule:
+    #        tags:
+    #            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
 
-#    App\Model\Order\Status\Transfer\OrderStatusImportCronModule:
-#        tags:
-#            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
+    #    App\Model\Order\Status\Transfer\OrderStatusImportCronModule:
+    #        tags:
+    #            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
+
+    #####################################
+    ## PRODUCTS TRANSFER CRON INSTANCE ##
+    #####################################
+
+    App\Model\Product\Transfer\ProductInfoQueueImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
+
+    App\Model\Product\Transfer\ProductImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
