--- a/docker/nginx/s3/nginx.conf
+++ b/docker/nginx/s3/nginx.conf
@@ -3,6 +3,16 @@ upstream php-upstream {
 }
 
 server {
+    listen 80;
+    root /var/www/html/web;
+
+    location /health {
+        stub_status  on;
+        access_log   off;
+    }
+}
+
+server {
     listen 8080;
     access_log /var/log/nginx/shopsys-framework.access.log;
     root /var/www/html/web;
