--- a/config/parameters.yml.dist
+++ b/config/parameters.yml.dist
@@ -103,3 +103,5 @@ parameters:
             datalayer_locale: cs
 
     smsManagerApiKey: 3e17f29771088c3e8bd74b78f040c4aad4e9a3e5
+
+    disable_form_fields_from_transfer: false
