services.yaml: services extension using alias syntax instead of replacing class
- enables annotations fixer to recognize the class extension
- all missing annotations added/fixed

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -464,16 +464,13 @@ services:
 
     Shopsys\FrameworkBundle\Model\Pricing\Group\PricingGroupRepository: '@App\Model\Pricing\Group\PricingGroupRepository'
 
-    Shopsys\FrameworkBundle\Model\Order\Status\OrderStatusDataFactoryInterface:
-        class: App\Model\Order\Status\OrderStatusDataFactory
+    Shopsys\FrameworkBundle\Model\Order\Status\OrderStatusDataFactoryInterface: '@App\Model\Order\Status\OrderStatusDataFactory'
 
     Shopsys\FrameworkBundle\Model\Order\Status\Grid\OrderStatusGridFactory: '@App\Model\Order\Status\Grid\OrderStatusGridFactory'
 
-    Shopsys\FrameworkBundle\Model\Order\Status\OrderStatusFacade:
-        class: App\Model\Order\Status\OrderStatusFacade
+    Shopsys\FrameworkBundle\Model\Order\Status\OrderStatusFacade: '@App\Model\Order\Status\OrderStatusFacade'
 
-    Shopsys\FrameworkBundle\Model\Order\Status\OrderStatusRepository:
-        class: App\Model\Order\Status\OrderStatusRepository
+    Shopsys\FrameworkBundle\Model\Order\Status\OrderStatusRepository: '@App\Model\Order\Status\OrderStatusRepository'
 
     App\Model\Gtm\GtmContainer:
         arguments:
