--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -146,3 +146,15 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '*' }
+
+    #########################
+    ## CATEGORIES TRANSFER ##
+    #########################
+    App\Model\Category\Transfer\CategoryQueueImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
+
+    App\Model\Category\Transfer\CategoryImportCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '15' }
+
