--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -41,6 +41,7 @@ parameters:
             - '*/src/Form/Admin/StoreFormType.php'
             - '*/src/Controller/Front/PromoCodeController.php'
             - '*/src/Form/Admin/PromoCodeFormTypeExtension.php'
+            - '*/src/Form/Admin/CategoryFormTypeExtension.php'
             - '*/src/Controller/Front/CartController.php'
             - '*/src/Model/Product/Pricing/ProductPriceCalculation.php'
 
