--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -156,5 +156,8 @@ services:
 
     App\Model\Category\Transfer\CategoryImportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '15' }
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
 
+    App\Model\Category\Transfer\CategoryRemoveCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*' }
