--- a/config/domains.yml
+++ b/config/domains.yml
@@ -1,11 +1,11 @@
 domains:
     -   id: 1
-        name: "B2C - CZ"
+        name: "Tropic CZ"
         locale: cs
     -   id: 2
-        name: "B2C - SK"
+        name: "Tropic SK"
         locale: sk
     -   id: 3
-        name: "B2C - EN"
+        name: "Tropic EN"
         locale: en
 
