When an unregistered customer agrees to register in 3rd order step, his/her current order preview and then order creation uses pricing group for registered customers.

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -625,3 +625,11 @@ services:
     Shopsys\FrameworkBundle\Model\Customer\BillingAddressDataFactoryInterface: '@App\Model\Customer\BillingAddressDataFactory'
 
     Shopsys\FrameworkBundle\Model\Customer\DeliveryAddressDataFactoryInterface: '@App\Model\Customer\DeliveryAddressDataFactory'
+
+    App\Model\Product\Pricing\ProductPriceCalculationForCustomerUser: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Pricing\ProductPriceCalculationForCustomerUser: '@App\Model\Product\Pricing\ProductPriceCalculationForCustomerUser'
+
+    App\Model\Product\Pricing\QuantifiedProductPriceCalculation: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Pricing\QuantifiedProductPriceCalculation: '@App\Model\Product\Pricing\QuantifiedProductPriceCalculation'
