--- a/config/services_test.yml
+++ b/config/services_test.yml
@@ -204,3 +204,11 @@ services:
     Shopsys\FrameworkBundle\Model\Transport\TransportFacade: '@App\Model\Transport\TransportFacade'
 
     Shopsys\FrameworkBundle\Component\Image\ImageFacade: '@App\Component\Image\ImageFacade'
+
+    App\Model\Product\Pricing\ProductPriceCalculationForCustomerUser: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Pricing\ProductPriceCalculationForCustomerUser: '@App\Model\Product\Pricing\ProductPriceCalculationForCustomerUser'
+
+    App\Model\Product\Pricing\QuantifiedProductPriceCalculation: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Pricing\QuantifiedProductPriceCalculation: '@App\Model\Product\Pricing\QuantifiedProductPriceCalculation'
