--- a/config/services.yaml
+++ b/config/services.yaml
@@ -637,3 +637,5 @@ services:
     App\Component\Transfer\Pohoda\Category\PohodaCategoryExportFacade:
         arguments:
             $logger: '@monolog.logger.cron'
+
+    Shopsys\FrameworkBundle\Model\Mail\MailTemplateFacade: '@App\Model\Mail\MailTemplateFacade'
