variants creation: data fixtures

--- a/config/services_test.yml
+++ b/config/services_test.yml
@@ -212,3 +212,5 @@ services:
     App\Model\Product\Pricing\QuantifiedProductPriceCalculation: ~
 
     Shopsys\FrameworkBundle\Model\Product\Pricing\QuantifiedProductPriceCalculation: '@App\Model\Product\Pricing\QuantifiedProductPriceCalculation'
+
+    App\Model\Product\ProductVariantTropicFacade: ~
