PDFs with gift certificates are now generated when gift certificates are ordered. Those PDFs are then attached to emails.

--- a/config/uploaded_files.yml
+++ b/config/uploaded_files.yml
@@ -3,3 +3,8 @@
     types:
         -   name: default
             multiple: true
+-   name: giftCertificate
+    class: App\Model\Order\GiftCertificate\OrderGiftCertificate
+    types:
+        -   name: default
+            multiple: false
