--- a/composer.json
+++ b/composer.json
@@ -54,6 +54,7 @@
         "doctrine/doctrine-fixtures-bundle": "^3.0.2",
         "doctrine/doctrine-migrations-bundle": "^1.3.0",
         "doctrine/persistence": "~1.2.0",
+        "dompdf/dompdf": "^0.8.5",
         "elasticsearch/elasticsearch": "v7.5.0 as 6.0.1",
         "emanueleminotto/twig-cache-bundle": "^1.0",
         "fp/jsformvalidator-bundle": "^1.5.1",
