--- a/config/services.yaml
+++ b/config/services.yaml
@@ -641,3 +641,7 @@ services:
     Shopsys\FrameworkBundle\Model\Mail\MailTemplateFacade: '@App\Model\Mail\MailTemplateFacade'
 
     App\Model\Order\GiftCertificate\Mail\OrderGiftCertificateMail: ~
+
+    App\Model\Order\GiftCertificate\Pdf\OrderGiftCertificatePdfFacade:
+        arguments:
+            $templating: '@templating'
