--- a/phpstan.neon
+++ b/phpstan.neon
@@ -19,6 +19,10 @@ parameters:
             # the function is indeed defined in vendor/twig/twig/src/Extension/CoreExtension.php
             message: '#^Function twig_date_format_filter not found\.$#'
             path: %currentWorkingDirectory%/src/Twig/DateTimeFormatterExtension.php
+        -
+            # the method is overridden to be deprecated
+            message: '#^Method App\\Model\\Product\\ProductVariantFacade::createVariant\(\) should return App\\Model\\Product\\Product but return statement is missing\.$#'
+            path: %currentWorkingDirectory%/src/Model/Product/ProductVariantFacade.php
 includes:
     - vendor/phpstan/phpstan-doctrine/extension.neon
     - vendor/phpstan/phpstan-phpunit/extension.neon
