upgrade to latest gitlab and kubernetes scripts - upgrade Dockerfile to newest SSFW version - remove useless php-fpm conf and nginx conf - remove some variables from gitlab-ci.yml - add monolog for logging in production - remove some duplicate and useless phing targets from tests stage - upgrade kubernetes deployment bundle

--- a/gitlab/docker-compose-ci.yml
+++ b/gitlab/docker-compose-ci.yml
@@ -28,7 +28,7 @@ services:
             - "8000:8080"
 
     php-fpm:
-        image: php-fpm
+        image: ${TAG}
         container_name: shopsys-framework-php-fpm
         ports:
             - "35729:35729"
