--- a/docker/php-fpm/Dockerfile
+++ b/docker/php-fpm/Dockerfile
@@ -1,13 +1,4 @@
-FROM henzigo/shopsys-framework:v9.0.0 as base
-
-USER root
-
-# install PostgreSQl client for dumping database
-RUN wget --quiet -O - https://www.postgresql.org/media/keys/ACCC4CF8.asc | apt-key add - && \
-    sh -c 'echo "deb http://apt.postgresql.org/pub/repos/apt/ $(lsb_release -sc)-pgdg main" > /etc/apt/sources.list.d/PostgreSQL.list' && \
-    apt-get update && apt-get install -y postgresql-12 postgresql-client-12 && apt-get clean
-
-USER www-data
+FROM henzigo/shopsys-framework:v9.0.0-dev as base
 
 ########################################################################################################################
 
@@ -29,8 +20,6 @@ USER www-data
 ########################################################################################################################
 
 FROM base as production
-
-COPY ${project_root}/docker/php-fpm/production-www.conf /usr/local/etc/php-fpm.d/www.conf
 
 COPY --chown=www-data:www-data / /var/www/html
 
