--- a/gitlab/gitlab-ci.yml
+++ b/gitlab/gitlab-ci.yml
@@ -1,8 +1,3 @@
-image: docker:19.03.1
-
-services:
-    -   name: docker:19.03.1-dind
-
 stages:
     - build
     - test
@@ -16,7 +11,7 @@ stages:
 
 .deploy: &deploy
     image:
-        name: shopsys/kubernetes-buildpack:0.4.0-dev
+        name: registry.shopsys.cz/devops/kubernetes-buildpack:1.0
     stage: deploy
     needs:
         - build
@@ -25,24 +20,19 @@ stages:
     script:
         - docker create -ti --name image ${TAG} bash
         - docker cp image:/var/www/html/var/ ./
-        - apk add --no-cache bash openvpn
         - openvpn --daemon --config $OVPN
         - sleep 10
-        - mkdir -p /root/.kube/ && echo "${KUBE_CONFIG}" > /root/.kube/config
+        - echo "${KUBE_CONFIG}" > /root/.kube/config
         - chmod +x ./deploy/deploy-project.sh && ./deploy/deploy-project.sh deploy
 
 variables:
     TAG: ${CI_REGISTRY_IMAGE}:${CI_COMMIT_SHA}
-    DOCKER_DRIVER: overlay2
-    DOCKER_TLS_CERTDIR: ""
     HOST: ${CI_COMMIT_REF_SLUG}.${CI_PROJECT_NAME}.${REVIEW_URL}
     HOSTS: ${CI_COMMIT_REF_SLUG}.${CI_PROJECT_NAME}.${REVIEW_URL}, sk.${CI_COMMIT_REF_SLUG}.${CI_PROJECT_NAME}.${REVIEW_URL}, en.${CI_COMMIT_REF_SLUG}.${CI_PROJECT_NAME}.${REVIEW_URL}
     COMPOSE_PROJECT_NAME: ${CI_PROJECT_NAME}__${CI_COMMIT_REF_SLUG}
-    PRODUCTION_URL: ""
-    DEVEL_URL: ""
 
 before_script:
-    - docker login -u ${CI_REGISTRY_USER} -p ${CI_REGISTRY_PASSWORD} ${CI_REGISTRY}
+    - echo ${CI_REGISTRY_PASSWORD} | docker login -u ${CI_REGISTRY_USER} ${CI_REGISTRY} --password-stdin
 
 build:
     stage: build
@@ -61,7 +51,7 @@ test:standards:
     variables:
         GIT_STRATEGY: none
     script:
-        - docker run -i ${TAG} /bin/bash -c "mv PRODUCTION DEVELOPMENT; php phing composer-dev npm dirs-create test-dirs-create assets standards tests-unit tests-acceptance-build"
+        - docker run -i ${TAG} /bin/bash -c "mv PRODUCTION DEVELOPMENT; php phing composer-dev standards"
 
 test:functional:
     image: tmaier/docker-compose:latest
@@ -71,10 +61,8 @@ test:functional:
         - docker
     script:
         - cp -f ./gitlab/docker-compose-ci.yml ./docker-compose.yml
-        - docker pull ${TAG}
-        - docker tag ${TAG} php-fpm
         - docker-compose up -d
-        - docker-compose exec -T php-fpm /bin/bash -c "mv PRODUCTION DEVELOPMENT; php phing composer-dev npm dirs-create test-dirs-create assets db-create test-db-create build-demo-dev-quick error-pages-generate tests"
+        - docker-compose exec -T php-fpm /bin/bash -c "mv PRODUCTION DEVELOPMENT; php phing composer-dev db-create test-db-create build-demo-dev-quick error-pages-generate tests"
 
 review:
     stage: review
@@ -82,8 +70,6 @@ review:
         name: "review/${CI_COMMIT_REF_SLUG}"
         url: https://${CI_COMMIT_REF_SLUG}.${CI_PROJECT_NAME}.${REVIEW_URL}
         on_stop: review:stop
-    variables:
-        CI_NETWORK: ci_default
     needs:
         - build
     <<: *only-default
@@ -103,7 +89,6 @@ review:stop:
     stage: review
     variables:
         GIT_STRATEGY: none
-        CI_NETWORK: ci_default
     tags:
         - review
     needs:
@@ -126,7 +111,6 @@ deploy:production:
     allow_failure: false
     resource_group: deploy_production
     variables:
-        DOCKER_HOST: tcp://docker:2375/
         KUBE_CONFIG: ${KUBE_CONFIG_PROD}
     only:
         - master
@@ -139,7 +123,6 @@ deploy:devel:
     <<: *deploy
     resource_group: deploy_devel
     variables:
-        DOCKER_HOST: tcp://docker:2375/
         KUBE_CONFIG: ${KUBE_CONFIG_DEVEL}
     only:
         - devel
