--- a/easy-coding-standard.yml
+++ b/easy-coding-standard.yml
@@ -60,6 +60,7 @@ parameters:
             - '*/src/Controller/Front/CartController.php'
             - '*/src/Model/Order/OrderFacade.php'
             - '*/src/Form/Admin/ProductFormTypeExtension.php'
+            - '*/src/Form/Admin/PromoCodeFormTypeExtension.php'
 
         ObjectCalisthenics\Sniffs\Metrics\PropertyPerClassLimitSniff:
             - '*/src/Model/Order/Order.php'
