Product import from Pohoda now includes selling price, purchase price and VAT. VAT now has Pohoda ID that can be changed in administration. Purchase price is new pricing group. DomainDataCreator now creates pricing groups and vats with proper names instead of "Default". DataFixtures expect them to already exist and won't duplicate them.

--- a/config/forms.yml
+++ b/config/forms.yml
@@ -86,3 +86,7 @@ services:
     App\Form\Admin\AllMailTemplatesFormTypeExtension:
         tags:
             - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Mail\AllMailTemplatesFormType }
+
+    App\Form\Admin\VatFormTypeExtension:
+        tags:
+            - { name: form.type_extension, extended_type: Shopsys\FrameworkBundle\Form\Admin\Vat\VatFormType }
