FE product filter: it is possible to filter by variant's parameter values

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -638,3 +638,5 @@ services:
     App\Model\Order\GiftCertificate\Pdf\OrderGiftCertificatePdfFacade:
         arguments:
             $templating: '@templating'
+
+    Shopsys\FrameworkBundle\Model\Product\Filter\ParameterFilterChoiceRepository: '@App\Model\Product\Filter\ParameterFilterChoiceRepository'
