--- a/config/services_test.yml
+++ b/config/services_test.yml
@@ -210,3 +210,5 @@ services:
     Shopsys\FrameworkBundle\Model\Product\Pricing\QuantifiedProductPriceCalculation: '@App\Model\Product\Pricing\QuantifiedProductPriceCalculation'
 
     App\Model\Product\ProductVariantTropicFacade: ~
+
+    Shopsys\FrameworkBundle\Model\Product\Filter\ParameterFilterChoiceRepository: '@App\Model\Product\Filter\ParameterFilterChoiceRepository'
