FE product filter: variant prices are taken into account
- also fixed main variant "price from" - only sellable variants are now taken into account

--- a/config/services.yaml
+++ b/config/services.yaml
@@ -640,3 +640,5 @@ services:
             $templating: '@templating'
 
     Shopsys\FrameworkBundle\Model\Product\Filter\ParameterFilterChoiceRepository: '@App\Model\Product\Filter\ParameterFilterChoiceRepository'
+
+    Shopsys\FrameworkBundle\Model\Product\Filter\PriceRangeRepository: '@App\Model\Product\Filter\PriceRangeRepository'
