--- a/config/services_test.yml
+++ b/config/services_test.yml
@@ -212,3 +212,5 @@ services:
     App\Model\Product\ProductVariantTropicFacade: ~
 
     Shopsys\FrameworkBundle\Model\Product\Filter\ParameterFilterChoiceRepository: '@App\Model\Product\Filter\ParameterFilterChoiceRepository'
+
+    Shopsys\FrameworkBundle\Model\Product\Filter\PriceRangeRepository: '@App\Model\Product\Filter\PriceRangeRepository'
