--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -14,41 +14,9 @@ services:
         tags:
             - { name: shopsys.cron, hours: '3', minutes: '50', readableFrequency: '1x za den' }
 
-    #    App\Model\Product\Pricing\Transfer\AllProductPriceImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '01', minutes: '30' }
-    #
-    #    App\Model\Product\Pricing\Transfer\ChangedProductPriceImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '*', minutes: '*' }
-    #
-    #    App\Model\Product\StoreStock\Transfer\AllCzechStoreStockImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '03', minutes: '00' }
-    #
-    #    App\Model\Product\StoreStock\Transfer\AllSlovakStoreStockImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '03', minutes: '00' }
-    #
-    #    App\Model\Product\StoreStock\Transfer\AllGermanStoreStockImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '03', minutes: '00' }
-    #
-    #    App\Model\Product\StoreStock\Transfer\ChangedStoreStockImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '*', minutes: '*' }
-
     App\Component\Balikobot\Pickup\DownloadPickupPlacesCronModule:
         tags:
             - { name: shopsys.cron, hours: '1', minutes: '00', readableFrequency: 'v 01:00 a při změně dopravy' }
-
-    App\Model\Customer\CustomerUpdatePricingGroupFromIsCronModule:
-        tags:
-            - { name: shopsys.cron, hours: '23', minutes: '50', readableFrequency: 'v 23:50' }
-
-    #    App\Model\Order\Mall\OrderImportCronModule:
-    #      tags:
-    #           - { name: shopsys.cron, hours: '23', minutes: '00', readableFrequency: '1x za hodinu' }
 
     #    App\Model\Product\Mall\MallProductExportCronModule:
     #        tags:
@@ -66,25 +34,9 @@ services:
         tags:
             - { name: shopsys.cron, hours: '23', minutes: '00' }
 
-    #############################
-    ## CUSTOMERS CRON INSTANCE ##
-    #############################
-
-    #    App\Model\Customer\Transfer\ChangedCustomerImportCronModule:
-    #       tags:
-    #           - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers}
-    #
-    #    App\Model\Customer\Transfer\CzechCustomerImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '02', minutes: '30', instanceName: customers}
-    #
-    #    App\Model\Customer\Transfer\SlovakCustomerImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '02', minutes: '30', instanceName: customers}
-    #
-    #    App\Model\Customer\Transfer\GermanCustomerImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '02', minutes: '30', instanceName: customers}
+    #################################
+    ## PAYMENT GATES CRON INSTANCE ##
+    #################################
 
     App\Model\GoPay\OrderGoPayStatusUpdateCronModule:
         tags:
@@ -93,18 +45,6 @@ services:
     App\Model\PayPal\OrderPayPalStatusUpdateCronModule:
         tags:
             - { name: shopsys.cron, hours: '*', minutes: '15', instanceName: customers, readableFrequency: '1x za hodinu' }
-
-    #    App\Model\Customer\Registration\Transfer\CustomerExportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
-    #
-    #    App\Model\Order\Transfer\OrderExportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
-
-    #    App\Model\Order\Status\Transfer\OrderStatusImportCronModule:
-    #        tags:
-    #            - { name: shopsys.cron, hours: '*', minutes: '*', instanceName: customers }
 
     #####################################
     ## PRODUCTS TRANSFER CRON INSTANCE ##
