--- a/config/images.yml
+++ b/config/images.yml
@@ -102,15 +102,17 @@
     class: Shopsys\FrameworkBundle\Model\Advert\Advert
     sizes:
         -   name: square
-            width: 380
-            height: 230
+            width: 429
+            height: 322
             crop: true
             occurrence: 'Front-end: Banner square on homepage'
         -   name: rectangle
-            width: 1180
-            height: 387
+            width: 1320
+            height: 322
             crop: true
             occurrence: 'Front-end: Banner rectangle on homepage'
+            additionalSizes:
+                - {width: 429, height: 322, media: "(max-width: 599px)"}
         -   name: bigBanner
             width: 190
             height: 460
