--- a/config/services/cron.yml
+++ b/config/services/cron.yml
@@ -24,11 +24,11 @@ services:
 
     Shopsys\FrameworkBundle\Model\Product\Availability\ProductAvailabilityCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*' }
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Recalculate product availabilities' }
 
     Shopsys\FrameworkBundle\Model\Product\ProductVisibilityImmediateCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*' }
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Recalculate immediate product visibilities' }
 
     App\Model\Product\Mall\MallProductDeleteCronModule:
         tags:
@@ -58,7 +58,7 @@ services:
 
     Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportCronModule:
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '*' }
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: "Export all products to Elasticsearch" }
 
     #########################
     ## CATEGORIES TRANSFER ##
@@ -74,18 +74,47 @@ services:
     overriddenDailyFeedCronModule:
         class: App\Model\Feed\DailyFeedCronModule
         tags:
-            - { name: shopsys.cron, hours: '*/6', minutes: '0' }
+            - { name: shopsys.cron, hours: '*/6', minutes: '0', readableName: 'Generate daily feeds' }
 
     Shopsys\FrameworkBundle\Model\Feed\HourlyFeedCronModule: ~
 
     overriddenHourlyFeedCronModule:
         class: Shopsys\FrameworkBundle\Model\Feed\HourlyFeedCronModule
         tags:
-            - { name: shopsys.cron, hours: '*', minutes: '10' }
+            - { name: shopsys.cron, hours: '*', minutes: '10', readableName: 'Generate hourly feeds' }
 
     Shopsys\FrameworkBundle\Model\Sitemap\SitemapCronModule: ~
 
     overriddenSitemapCronModule:
         class: Shopsys\FrameworkBundle\Model\Sitemap\SitemapCronModule
         tags:
-            - { name: shopsys.cron, hours: '4', minutes: '0' }
+            - { name: shopsys.cron, hours: '4', minutes: '0', readableName: 'Generate Sitemap' }
+
+    Shopsys\FrameworkBundle\Model\Pricing\Vat\VatDeletionCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Delete vats' }
+
+    Shopsys\FrameworkBundle\Model\Product\Pricing\ProductPriceCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: 'Recalculate product prices' }
+
+    Shopsys\FrameworkBundle\Model\Product\ProductVisibilityMidnightCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '0', minutes: '0', readableName: 'Recalculate midnight product visibilities' }
+
+    Shopsys\FrameworkBundle\Model\Product\Elasticsearch\ProductExportChangedCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '*', minutes: '*', readableName: "Export changed products to Elasticsearch" }
+
+    Shopsys\ProductFeed\HeurekaBundle\Model\HeurekaCategory\HeurekaCategoryCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '3', minutes: '0', readableName: 'Download Heureka categories' }
+
+    Shopsys\FrameworkBundle\Model\Cart\Item\DeleteOldCartsCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '0', minutes: '0', readableName: 'Delete old customer carts' }
+
+    # This module should run as last because it creates multiple kernels and fake requests.
+    Shopsys\FrameworkBundle\Component\Error\ErrorPageCronModule:
+        tags:
+            - { name: shopsys.cron, hours: '21', minutes: '10', readableName: 'Generate Error pages' }
